Fixed z-index issues

--- a/static/css/tongass.css
+++ b/static/css/tongass.css
@@ -30,7 +30,6 @@
 		color: #265778;
 	}
 	div.content {
-		margin-top:-2.5em;
 		position:relative;
 		margin-left:12em;
 	    padding: 0 2em;
@@ -39,16 +38,16 @@
 	    line-height: 1.6em;
 	    color:#777;
 	    font-family:sans-serif;
+	    z-index:1;
 	}
 	div.content h1 {
 		font-size:2em;
 		color:#444;
-		margin:1.5em 0 1em 0;
+		margin:.5em 0 1em 0;
 	}
 	div.content p {
 		display:block;
 		margin:1em 0;
-		z-index:2;
 	}
  
 	body {
@@ -237,6 +236,7 @@
 	    color: black;
 	    text-align: center;
 	    padding:2em;
+	    z-index:0;
 	 }
     .header h1 {
     	max-width:100%;
